# python-application-design-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
data_manipulator/: __init__.py  __main__.py  config.py  data_helper.py  exceptions.py  io_helper.py  log_helper.py  process.py
docs/: Wrap-up-a-real-README.md
inputs/: test1.csv
tests/test_results/: .gitkeep
